--- a/snakegame.html
+++ b/snakegame.html
@@ -25,5 +25,6 @@
 
     <canvas width="600" height="600"></canvas>
     <script src="/js/script.js"></script>
+    <h1>The Ultimate Snake Game ';..;'</h1>
 </body>
 </html>
